# veritas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  trust-tiers.md
examples/: oracle_demo.py  verify_demo.py
src/veritas/: __init__.py  cli.py  commit.py  log.py  merkle.py  verifier.py
src/veritas/anchor/: __init__.py  base.py  base_chain.py  solana.py
src/veritas/backends/: base.py  commit_only.py  tee.py  zk.py
tests/: test_backends.py  test_commit.py  test_log.py  test_merkle.py  test_verifier.py
verify-client/: package.json
verify-client/src/: index.ts  verify.ts
