[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas"
version = "0.1.0"
description = "Verifiable inference proofs anchored on-chain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
veritas = "veritas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
